apps/opensandbox/controller.yaml
---
# Source: opensandbox-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensandbox-controller-manager
  namespace: opensandbox-system
  labels:
    helm.sh/chart: opensandbox-controller-1.1.0
    app.kubernetes.io/name: opensandbox
    app.kubernetes.io/instance: opensandbox-controller
    control-plane: controller-manager
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opensandbox
      app.kubernetes.io/instance: opensandbox-controller
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/name: opensandbox
        app.kubernetes.io/instance: opensandbox-controller
        control-plane: controller-manager
    spec:
      serviceAccountName: opensandbox-controller-manager
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: manager
        image: sandbox-registry.cn-zhangjiakou.cr.aliyuncs.com/opensandbox/controller:release-1.1.0
        imagePullPolicy: IfNotPresent
        command:
        - /workspace/server
        args:
        - --leader-elect
        - --health-probe-bind-address=:8081
        - --zap-log-level=info
        - --kube-client-qps=100
        - --kube-client-burst=200
        - --image-committer-image=sandbox-registry.cn-zhangjiakou.cr.aliyuncs.com/opensandbox/image-committer:release-1.1.0
        - --commit-job-timeout=5m
        - --snapshot-registry=docker-registry.opensandbox-system.svc:5000
        - --snapshot-registry-insecure=true
        ports:
        - name: health
          containerPort: 8081
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
      terminationGracePeriodSeconds: 10
