apps/opensandbox/gateway.yaml
---
# Source: ingress-gateway/templates/service.yaml
# Copyright 2026 The OpenSandbox Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: opensandbox-ingress-gateway
  namespace: opensandbox-system
  labels:
    helm.sh/chart: ingress-gateway-1.1.0
    app.kubernetes.io/name: opensandbox-ingress-gateway
    app.kubernetes.io/instance: ingress-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: ingress-gateway
    app.kubernetes.io/part-of: opensandbox
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 28888
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: opensandbox-ingress-gateway
    app.kubernetes.io/instance: ingress-gateway
---
# Source: ingress-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensandbox-ingress-gateway
  namespace: opensandbox-system
  labels:
    helm.sh/chart: ingress-gateway-1.1.0
    app.kubernetes.io/name: opensandbox-ingress-gateway
    app.kubernetes.io/instance: ingress-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: ingress-gateway
    app.kubernetes.io/part-of: opensandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opensandbox-ingress-gateway
      app.kubernetes.io/instance: ingress-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opensandbox-ingress-gateway
        app.kubernetes.io/instance: ingress-gateway
        app.kubernetes.io/component: ingress-gateway
        app.kubernetes.io/part-of: opensandbox
    spec:
      serviceAccountName: opensandbox-ingress-gateway
      containers:
        - name: main
          image: sandbox-registry.cn-zhangjiakou.cr.aliyuncs.com/opensandbox/ingress:release-1.1.0
          imagePullPolicy: IfNotPresent
          args:
            - "--namespace=opensandbox"
            - "--port=28888"
            - "--provider-type=batchsandbox"
            - "--mode=uri"
            - "--log-level=info"
          ports:
            - name: http
              containerPort: 28888
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status.ok
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /status.ok
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 96Mi
---
# Source: ingress-gateway/templates/deployment.yaml
# Copyright 2026 The OpenSandbox Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: ingress-gateway/templates/rbac.yaml
# Copyright 2026 The OpenSandbox Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Read access to pods/services and BatchSandboxes so the gateway can resolve
# sandbox endpoints in the dataplane namespace.
